# Sales-Forcasting-TabTransformer

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  sales_forecasting.ipynb
artifacts/linreg/: config_snapshot.json  metrics.json  model.joblib
artifacts/tabtx/: config_snapshot.json  metrics.json  model.pt
artifacts/xgb/: config_snapshot.json  metrics.json  model.joblib
config/: default.yaml
data/processed/: metadata.json  sales_processed.parquet
notebooks/: sales_forecasting.ipynb
src/: __init__.py  cli.py  data.py  evaluate.py  metrics.py  train.py  utils.py
src/models/: __init__.py  base.py  baselines.py  tabtransformer.py
tests/: conftest.py  test_cli.py  test_data.py  test_metrics.py  test_models.py
